--- a/texttospeechconfigurationui.ui
+++ b/texttospeechconfigurationui.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>texttospeechconfigurationui</class>
 <widget class="QWidget">
     <property name="name">
@@ -8,12 +8,12 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>227</width>
-            <height>123</height>
+            <width>265</width>
+            <height>142</height>
         </rect>
     </property>
     <property name="caption">
-        <string>Text-to-speech</string>
+        <string>Text-to-Speech</string>
     </property>
     <vbox>
         <property name="name">
@@ -80,4 +80,10 @@
     <signal>configurationChanged()</signal>
 </signals>
 <layoutdefaults spacing="6" margin="11"/>
+<includehints>
+    <includehint>kurlrequester.h</includehint>
+    <includehint>klineedit.h</includehint>
+    <includehint>kpushbutton.h</includehint>
+    <includehint>kcombobox.h</includehint>
+</includehints>
 </UI>
