--- a/wordcompletion/creationsourceui.ui
+++ b/wordcompletion/creationsourceui.ui
@@ -8,7 +8,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>413</width>
+            <width>216</width>
             <height>167</height>
         </rect>
     </property>
@@ -19,14 +19,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QRadioButton" row="4" column="0" rowspan="1" colspan="2">
-            <property name="name">
-                <cstring>mergeButton</cstring>
-            </property>
-            <property name="text">
-                <string>&amp;Merge dictionaries</string>
-            </property>
-        </widget>
         <widget class="QRadioButton" row="0" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>createButton</cstring>
@@ -36,6 +28,14 @@
             </property>
             <property name="checked">
                 <bool>true</bool>
+            </property>
+        </widget>
+        <widget class="QRadioButton" row="4" column="0" rowspan="1" colspan="2">
+            <property name="name">
+                <cstring>mergeButton</cstring>
+            </property>
+            <property name="text">
+                <string>&amp;Merge dictionaries</string>
             </property>
         </widget>
         <widget class="QRadioButton" row="2" column="1">
@@ -55,25 +55,6 @@
             </property>
             <property name="text">
                 <string>From &amp;File</string>
-            </property>
-        </widget>
-        <widget class="QRadioButton" row="3" column="1">
-            <property name="name">
-                <cstring>directoryButton</cstring>
-            </property>
-            <property name="enabled">
-                <bool>true</bool>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>1</hsizetype>
-                    <vsizetype>0</vsizetype>
-                    <horstretch>1</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-            <property name="text">
-                <string>From &amp;Directory</string>
             </property>
         </widget>
         <widget class="QRadioButton" row="1" column="1">
@@ -98,6 +79,25 @@
                 <bool>true</bool>
             </property>
         </widget>
+        <widget class="QRadioButton" row="3" column="1">
+            <property name="name">
+                <cstring>directoryButton</cstring>
+            </property>
+            <property name="enabled">
+                <bool>true</bool>
+            </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>1</hsizetype>
+                    <vsizetype>0</vsizetype>
+                    <horstretch>1</horstretch>
+                    <verstretch>0</verstretch>
+                </sizepolicy>
+            </property>
+            <property name="text">
+                <string>From &amp;Directory</string>
+            </property>
+        </widget>
         <spacer row="1" column="0" rowspan="3" colspan="1">
             <property name="name">
                 <cstring>spacer1</cstring>
@@ -115,6 +115,14 @@
                 </size>
             </property>
         </spacer>
+        <widget class="QRadioButton" row="5" column="0" rowspan="1" colspan="2">
+            <property name="name">
+                <cstring>emptyButton</cstring>
+            </property>
+            <property name="text">
+                <string>&amp;Empty wordlist</string>
+            </property>
+        </widget>
     </grid>
 </widget>
 <connections>
