--- a/texttospeechconfigurationui.ui
+++ b/texttospeechconfigurationui.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>texttospeechconfigurationui</class>
 <widget class="QWidget">
     <property name="name">
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>379</width>
-            <height>204</height>
+            <width>391</width>
+            <height>222</height>
         </rect>
     </property>
     <property name="caption">
@@ -103,7 +103,7 @@
                         </sizepolicy>
                     </property>
                     <property name="text">
-                        <string>Chatacter &amp;encoding:</string>
+                        <string>Character &amp;encoding:</string>
                     </property>
                     <property name="buddy" stdset="0">
                         <cstring>characterCodingBox</cstring>
@@ -144,4 +144,10 @@
     <signal>configurationChanged()</signal>
 </signals>
 <layoutdefaults spacing="6" margin="11"/>
+<includehints>
+    <includehint>kurlrequester.h</includehint>
+    <includehint>klineedit.h</includehint>
+    <includehint>kpushbutton.h</includehint>
+    <includehint>kcombobox.h</includehint>
+</includehints>
 </UI>
