Make the wording 'empty wordlist' clearer
svn path=/trunk/kdeaccessibility/kmouth/; revision=312842

--- a/wordcompletion/creationsourceui.ui
+++ b/wordcompletion/creationsourceui.ui
@@ -120,7 +120,7 @@
                 <cstring>emptyButton</cstring>
             </property>
             <property name="text">
-                <string>&amp;Empty wordlist</string>
+                <string>Create an &amp;empty wordlist</string>
             </property>
         </widget>
     </grid>
